# ARJJ-GCS-HACKATHON

./: README.md  package-lock.json
gcs-hackathon/: README.md  package-lock.json  package.json  tailwind-test.html  tailwind.config.cjs  tmp-tailwind.css
gcs-hackathon/src/: App.vue
gcs-hackathon/src/assets/: main.css  tw-manual-test.css
gcs-hackathon/src/router/: index.ts
gcs-hackathon/src/stores/: auth.ts
gcs-hackathon/src/views/: BarcodesView.vue  CatalogView.vue  LoginView.vue
hackathon-db-connector/: Cargo.toml
hackathon-db-connector/src/: api.rs  fetch_programs.rs  insert_programs.rs  main.rs  schema.rs
