[package]
name = "hackathon-db-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4", features = ["cors"] }
